fixed misaligned background

--- a/app/assets/stylesheets/pins.scss
+++ b/app/assets/stylesheets/pins.scss
@@ -26,7 +26,7 @@ img{
   background-color: white;
   position: absolute;
   left: 50%;
-  margin-left: -412px;
+  margin-left: -405px;
   z-index: 2;
 }
 
@@ -37,7 +37,7 @@ img{
   background-color: #fddc03;
   position: absolute;
   left: 50%;
-  margin-left: -437px;
+  margin-left: -430px;
   z-index:  1;
   -moz-box-shadow: 0px 0px 50px rgba(0,0,0,0.4);
   -webkit-box-shadow: 0px 0px 50px rgba(0,0,0,0.4);
